Simplify shared JDOM parser handling